Initial commit: Complete SDK setup with GitHub Packages configuration